--- a/styles.css
+++ b/styles.css
@@ -42,3 +42,60 @@ a.active,a:hover {
     background: #1b9bff;
     transform: .5s;
 }
+.checkbtn {
+    font-size: 30px;
+    color: white;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+
+} 
+section {
+    background: url(run.jpg);
+}
+.check {
+    display: none;
+}
+@media (max-width: 952px) {
+    label.log {
+        font-size: 30px;
+        padding-left: 50px;
+
+    }
+    nav ul li a {
+        font-size: 16px;
+
+    }
+}
+@media (max-width: 858px) {
+    .checkbtn {
+        display: block;
+
+    }
+    ul {
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        text-align: center;
+        background: #2c3e50;
+     }
+     nav ul li {
+        display: block;
+     }
+     nav ul li a {
+        font-size: 20px;
+
+     }
+     a:hover ,a.active {
+        background: none;
+        color: #0082e6;
+     }
+     #check:checked ~ ul {
+        left: 0;
+     }
+     section {
+         background: url(run.jpg);
+     }
+
+}
