--- a/styles.css
+++ b/styles.css
@@ -51,8 +51,9 @@ a.active,a:hover {
     cursor: pointer;
 
 } 
-section {
-    background: url(run.jpg);
+section img{
+    height: 92%;
+    width: 99%;
 }
 .check {
     display: none;
